fix alignment issue for work landing page
Former-commit-id: 4878bb86be3c193cff0c9c25ef1a93da388e5e8f

--- a/stylesheets/_responsive.scss
+++ b/stylesheets/_responsive.scss
@@ -257,6 +257,10 @@
     }
     
   }
+  .about .col-md-7 img {
+    margin: 0 -30px;
+    width: calc(100% + 60px);
+  }
   .topnav .tabs {
     display: none;
   }
